--- a/andriodApp/app/src/main/res/layout/item_profiles.xml
+++ b/andriodApp/app/src/main/res/layout/item_profiles.xml
@@ -30,7 +30,7 @@
             android:layout_height="25dp"
             android:layout_marginTop="-2.5dp"
             android:layout_marginBottom="-2.5dp"
-            android:gravity="left|center_vertical"
+            android:gravity="start|center_vertical"
             android:includeFontPadding="false"
             android:maxLines="1"
             android:singleLine="true"
@@ -45,7 +45,7 @@
             android:layout_width="264dp"
             android:layout_height="48dp"
             android:layout_marginTop="4dp"
-            android:gravity="left|top"
+            android:gravity="start|top"
             android:includeFontPadding="false"
             android:lineHeight="24dp"
             android:text="   (780) 143 - 8312\n   saradean12@gmail.com"
