--- a/andriodApp/app/src/main/res/layout/org_home_page.xml
+++ b/andriodApp/app/src/main/res/layout/org_home_page.xml
@@ -5,7 +5,7 @@
     android:id="@+id/container_home_page_attendees"
     android:layout_width="match_parent"
     android:layout_height="807dp"
-    android:background="@drawable/container_home_page_attendees">
+    android:background="@drawable/white_background_layout">
 
   <TextView
         android:id="@+id/text_notifications"
@@ -14,7 +14,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginTop="360dp"
         android:layout_gravity="top|left"
-        android:gravity="left|center_vertical"
+        android:gravity="start|center_vertical"
         android:includeFontPadding="false"
         android:maxLines="1"
         android:singleLine="true"
@@ -55,7 +55,7 @@
         android:layout_gravity="top|left"
         android:layout_marginLeft="41dp"
         android:layout_marginTop="-23dp"
-        android:gravity="left|center_vertical"
+        android:gravity="start|center_vertical"
         android:includeFontPadding="false"
         android:maxLines="1"
         android:singleLine="true"
@@ -69,7 +69,7 @@
         android:layout_height="48dp"
         android:layout_marginLeft="40dp"
         android:layout_marginTop="28dp"
-        android:gravity="left|top"
+        android:gravity="start|top"
         android:includeFontPadding="false"
         android:lineHeight="24dp"
         android:text="👋 Welcome to Career Launchpad 2024! 🚀\n"
@@ -134,7 +134,7 @@
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="20dp"
-      android:gravity="left|center_vertical"
+      android:gravity="start|center_vertical"
       android:includeFontPadding="false"
       android:maxLines="1"
       android:singleLine="true"
