--- a/andriodApp/app/src/main/res/layout/qr_code_scan.xml
+++ b/andriodApp/app/src/main/res/layout/qr_code_scan.xml
@@ -85,7 +85,7 @@
         android:layout_marginTop="-5.5dp"
         android:layout_marginBottom="-5.5dp"
         android:layout_gravity="top|left"
-        android:gravity="left|center_vertical"
+        android:gravity="start|center_vertical"
         android:includeFontPadding="false"
         android:maxLines="1"
         android:singleLine="true"
