--- a/andriodApp/app/src/main/res/layout/container_initial_page.xml
+++ b/andriodApp/app/src/main/res/layout/container_initial_page.xml
@@ -2,8 +2,6 @@
 
 <LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto"
-  xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/container_initial_page"
   android:layout_width="match_parent"
   android:layout_height="807dp"
@@ -45,7 +43,7 @@
     android:layout_marginStart="67dp"
     android:layout_marginTop="29.5dp"
     android:layout_marginBottom="-1.5dp"
-    android:layout_gravity="left"
+    android:layout_gravity="start"
     android:gravity="center_horizontal|center_vertical"
     android:includeFontPadding="false"
     android:maxLines="1"
@@ -60,7 +58,7 @@
     android:layout_height="92dp"
     android:layout_marginStart="61dp"
     android:layout_marginTop="26dp"
-    android:layout_gravity="left"
+    android:layout_gravity="start"
     android:background="@drawable/container_group1">
     
     <ImageView
@@ -74,7 +72,7 @@
         android:id="@+id/text_attendee"
         android:layout_width="154dp"
         android:layout_height="38dp"
-        android:layout_gravity="left"
+        android:layout_gravity="start"
         android:layout_marginStart="51dp"
         android:layout_marginTop="27dp"
         android:layout_marginBottom="18dp"
@@ -93,7 +91,7 @@
     android:layout_height="92dp"
     android:layout_marginStart="61dp"
     android:layout_marginTop="23dp"
-    android:layout_gravity="left"
+    android:layout_gravity="start"
     android:background="@drawable/container_group1">
     
     <ImageView
@@ -110,7 +108,7 @@
       android:layout_marginStart="49dp"
       android:layout_marginTop="27dp"
       android:layout_marginBottom="22dp"
-      android:layout_gravity="left"
+      android:layout_gravity="start"
       android:gravity="center_horizontal|center_vertical"
       android:includeFontPadding="false"
       android:maxLines="1"
@@ -126,7 +124,7 @@
     android:layout_height="92dp"
     android:layout_marginStart="61dp"
     android:layout_marginTop="23dp"
-    android:layout_gravity="left"
+    android:layout_gravity="start"
     android:background="@drawable/container_group1">
     
     <ImageView
@@ -141,7 +139,7 @@
       android:layout_width="match_parent"
       android:layout_height="38dp"
       android:layout_marginStart="53dp"
-      android:layout_marginRight="52dp"
+      android:layout_marginEnd="52dp"
       android:layout_marginTop="27dp"
       android:layout_marginBottom="18dp"
       android:gravity="center_horizontal|center_vertical"
