--- a/andriodApp/app/src/main/res/layout/item_attendee.xml
+++ b/andriodApp/app/src/main/res/layout/item_attendee.xml
@@ -25,6 +25,14 @@
 
         <!-- Event title -->
         <TextView
+            android:id="@+id/attendCount"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="right"
+            android:textAlignment="gravity"
+            android:text="" />
+
+        <TextView
             android:id="@+id/text_categories"
             android:layout_width="wrap_content"
             android:layout_height="25dp"
