--- a/andriodApp/app/src/main/res/layout/org_home_page.xml
+++ b/andriodApp/app/src/main/res/layout/org_home_page.xml
@@ -157,14 +157,12 @@
       android:id="@+id/change_event"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:layout_marginStart="310dp"
       android:layout_marginTop="16dp"
-      android:layout_marginStart="340dp"
+      android:layout_marginEnd="32dp"
       android:layout_marginBottom="600dp"
-      android:layout_marginEnd="20dp"
-      android:text="..."
-      android:src="@drawable/plus_white"
+      android:text="="
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent" />
-
 
 </FrameLayout>
