--- a/andriodApp/app/src/main/res/layout/event_string.xml
+++ b/andriodApp/app/src/main/res/layout/event_string.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="5dp"
-    android:textSize="12sp"
-    android:id="@+id/R."
-    >
-
-</TextView>
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="5dp"
+        android:textSize="12sp"
+        android:id="@+id/event_name"
+        >
+    </TextView>
+</LinearLayout>
