--- a/andriodApp/app/src/main/res/layout/attendees_home_page.xml
+++ b/andriodApp/app/src/main/res/layout/attendees_home_page.xml
@@ -36,7 +36,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="0dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/img_career_fairs_web_banner" />
+        android:src="@drawable/image_circle_logo" />
 
     <ImageView
         android:id="@+id/location_pin_attendee_home"
@@ -74,7 +74,8 @@
         android:lineHeight="24dp"
         android:text="👋 Welcome to Career Launchpad 2024! 🚀\n"
         android:textColor="#FF000000"
-        android:textSize="20dp" />
+        android:textSize="20dp"
+        android:inputType="textMultiLine"/>
   </LinearLayout>
 
     <!-- RecyclerView for notifications -->
