Allowed for multiple events

--- a/andriodApp/app/src/main/res/layout/org_event_list.xml
+++ b/andriodApp/app/src/main/res/layout/org_event_list.xml
@@ -15,7 +15,7 @@
         android:textStyle="bold"
         android:textSize="12sp"
         android:background="@color/colorPrimary"
-        android:text="Create New Event" />
+        android:text="Select an Event" />
 
     <ListView
         android:layout_width="match_parent"
