--- a/andriodApp/app/src/main/res/layout/admin_browse_event.xml
+++ b/andriodApp/app/src/main/res/layout/admin_browse_event.xml
@@ -27,7 +27,7 @@
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		android:layout_marginTop="60dp"
-		android:layout_marginBottom="128dp"/>
+		android:layout_marginBottom="126dp"/>
 
 	<ImageView
 		android:id="@+id/back_attendee_browse_events"
@@ -51,7 +51,7 @@
 		android:scaleType="centerInside" />
 
 	<ImageView
-		android:id="@+id/profile_attendee"
+		android:id="@+id/profile_browse"
 		android:layout_width="38dp"
 		android:layout_height="38dp"
 		android:layout_marginStart="52.38dp"
@@ -59,7 +59,7 @@
 		android:layout_marginEnd="314.43dp"
 		android:layout_marginBottom="30.81dp"
 		android:scaleType="centerInside"
-		android:src="@drawable/profile"
+		android:src="@drawable/attendees_black"
 		android:contentDescription="Button to view attendee's projile" />
 
 	<ImageView
@@ -69,12 +69,11 @@
 		android:layout_marginStart="172dp"
 		android:layout_marginTop="700dp"
 		android:scaleType="centerInside"
-		android:src="@drawable/home"
+		android:src="@drawable/event_list_white"
 		android:contentDescription="Button to scan a QR using the camera" />
 
-	<!--  TODO: Figure out a way to replace show list icon, with the white one to show current tab -->
 	<ImageView
-		android:id="@+id/event_list"
+		android:id="@+id/photo_browse"
 		android:layout_width="38dp"
 		android:layout_height="wrap_content"
 		android:layout_marginStart="300dp"
@@ -82,5 +81,5 @@
 		android:layout_marginBottom="0.05dp"
 		android:contentDescription="Button to show a list "
 		android:scaleType="centerInside"
-		android:src="@drawable/event_list_black" />
+		android:src="@drawable/photos" />
 </FrameLayout>
