--- a/andriodApp/app/src/main/res/layout/admin_delete_event.xml
+++ b/andriodApp/app/src/main/res/layout/admin_delete_event.xml
@@ -78,7 +78,7 @@
         android:layout_height="17dp"
         android:layout_gravity="top|start"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="315dp"
+        android:layout_marginTop="320dp"
         android:gravity="start|center_vertical"
         android:includeFontPadding="false"
         android:maxLines="1"
@@ -93,7 +93,7 @@
         android:layout_height="17dp"
         android:layout_gravity="top|start"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="300dp"
+        android:layout_marginTop="305dp"
         android:gravity="start|center_vertical"
         android:includeFontPadding="false"
         android:maxLines="1"
@@ -135,36 +135,6 @@
         android:textSize="13sp" />
 
     <TextView
-        android:id="@+id/attendeecnt"
-        android:layout_width="wrap_content"
-        android:layout_height="17dp"
-        android:layout_gravity="top|start"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="375dp"
-        android:gravity="start|center_vertical"
-        android:includeFontPadding="false"
-        android:maxLines="1"
-        android:singleLine="true"
-        android:text="Max Attendees:"
-        android:textStyle="bold|italic"
-        android:textColor="#FF000000"
-        android:textSize="13sp" />
-    <TextView
-        android:id="@+id/attendeecntdata"
-        android:layout_width="wrap_content"
-        android:layout_height="17dp"
-        android:layout_gravity="top|start"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="389dp"
-        android:gravity="start|center_vertical"
-        android:includeFontPadding="false"
-        android:maxLines="1"
-        android:singleLine="true"
-        android:text="Max Attendees:"
-        android:textColor="#FF000000"
-        android:textSize="13sp" />
-
-    <TextView
         android:id="@+id/event_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -201,7 +171,7 @@
         android:layout_height="17dp"
         android:layout_gravity="top|start"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="418dp"
+        android:layout_marginTop="380dp"
         android:gravity="start|center_vertical"
         android:includeFontPadding="false"
         android:maxLines="1"
@@ -213,16 +183,16 @@
 
     <FrameLayout
         android:layout_width="360dp"
-        android:layout_height="160dp"
+        android:layout_height="220dp"
         android:layout_gravity="top|start"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="441dp"
+        android:layout_marginTop="398dp"
         android:background="@drawable/drawable_shape">
 
         <TextView
             android:id="@+id/continer_event_summary_date_icon1"
             android:layout_width="360dp"
-            android:layout_height="160dp"
+            android:layout_height="220dp"
             android:layout_gravity="bottom|start"
             android:gravity="start|top"
             android:includeFontPadding="false"
@@ -281,25 +251,25 @@
         android:layout_marginEnd="314.43dp"
         android:layout_marginBottom="30.81dp"
         android:scaleType="centerInside"
-        android:src="@drawable/profile" />
+        android:src="@drawable/attendees_black" />
 
     <ImageView
-        android:id="@+id/home_admin_browse_attendee"
+        android:id="@+id/event_list"
         android:layout_width="38dp"
         android:layout_height="38dp"
         android:layout_marginStart="172dp"
         android:layout_marginTop="700dp"
         android:scaleType="centerInside"
-        android:src="@drawable/home"/>
+        android:src="@drawable/event_list_white"/>
 
     <ImageView
-        android:id="@+id/event_list"
+        android:id="@+id/photo_browse"
         android:layout_width="38dp"
         android:layout_height="38dp"
         android:layout_marginStart="300dp"
         android:layout_marginTop="700dp"
         android:layout_marginBottom="0.05dp"
         android:scaleType="centerInside"
-        android:src="@drawable/event_list_black" />
+        android:src="@drawable/photos" />
 
 </FrameLayout>
