--- a/andriodApp/app/src/main/res/layout/view_attendees_at_event.xml
+++ b/andriodApp/app/src/main/res/layout/view_attendees_at_event.xml
@@ -31,12 +31,14 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="124dp"
-        android:layout_marginEnd="132dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginEnd="90dp"
         android:text="Attendees 15/24"
         android:textColor="#FF1A1A1A"
         android:textStyle="bold"
-        android:textSize="20dp" />
+        android:textSize="24sp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="15dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
